--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,8 @@
 <head>
     <body>
         <h1>Natthan Champathip</h1>
+        <p>Age 20</p>
+        <p>Faculty : software engineer</p>
         <a href = "index.html">index link</a>
     </body>
 </head>
