to be continue2

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <body>
-        <a href = "friend.html">index link</a>
-        <img src="672115008.jpg" alt="">
-    </body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My profile</title>
 </head>
-to be continued
+<body>
+    <h1>Chanya Bunrueang</h1>
+        <a href = "index.html">index link</a>
+        to be continue
+</body>
+</html>
