Revert "to be continue2"
This reverts commit ed1a710654d4d8fc3cb3c221c5531ab507af6c91.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My profile</title>
+    <body>
+        <a href = "friend.html">index link</a>
+        <img src="672115008.jpg" alt="">
+    </body>
 </head>
-<body>
-    <h1>Chanya Bunrueang</h1>
-        <a href = "index.html">index link</a>
-        to be continue
-</body>
-</html>
+to be continued
