--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <body>
         <a href = "friend.html">index link</a>
         <img src="672115008.jpg" alt="">
+         <img src="logocamt.jpg" alt="">
     </body>
 </head>
-to be continued
+
